bug(ui): improve app title visibility
- Modify linear gradient colour to a lighter shade

[Finishes #165373009]

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -1,6 +1,6 @@
 .page-wrapper--bg {
   display: flex;
-  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../imgs/landing_bg.jpg') no-repeat fixed center;
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)), url('../imgs/landing_bg.jpg') no-repeat fixed center;
   background-size: cover;
 }
 .landing-page-nav {
@@ -10,7 +10,7 @@
   width: 100%;
   height: 100px;
   padding: 10px 2%;
-  background: rgba(0, 0, 0, 0.1)
+  background: rgba(0, 0, 0, 0.6)
 }
 .landing-page-nav__link {
   min-width: 100px;
@@ -43,7 +43,7 @@
 }
 .landing-page-main__title {
   margin-bottom: 10px;
-  color: #08415c;
+  color: #082e3f;
 }
 .landing-page-main__description {
   margin-top: 10px;
